--- a/core/res/res/values/nexus_symbols.xml
+++ b/core/res/res/values/nexus_symbols.xml
@@ -25,6 +25,9 @@
   <java-symbol type="array" name="shutdown_reboot_actions" />
   <java-symbol type="bool" name="config_advanced_reboot" />
 
+  <!-- Package Manager -->
+  <java-symbol type="array" name="config_disabledComponents" />
+
   <!-- google webview -->
   <java-symbol type="string" name="config_alternateWebViewPackageName" />
 </resources>
