--- a/core/res/res/values/nexus_symbols.xml
+++ b/core/res/res/values/nexus_symbols.xml
@@ -27,6 +27,7 @@
 
   <!-- Package Manager -->
   <java-symbol type="array" name="config_disabledComponents" />
+  <java-symbol type="array" name="config_forceEnabledComponents" />
 
   <!-- google webview -->
   <java-symbol type="string" name="config_alternateWebViewPackageName" />
