Advanced Reboot + Fixs (Squashed) * SystemUI: Add global reboot option -CAF * AdvancedReboot: Add advanced reboot options -CM * AdvancedReboot: Enhance power menu reboot option -CM * ShutdownThread: Fix longpress power for safemode -EuphoriaOS * ShutdownThread: Enable advanced reboot by default -Beanstown106 * AdvancedReboot: Enable Via overlay instead of Setting -Beanstown106 * AdvancedReboot: adapted to work on android marshmallow -Beanstown106 * AdvancedReboot: Remove keyguard restrictions on advanced reboot -Beanstown106
99% of people who flash roms want advanced reboot their was no need for it to be a setting

Edited and squashed By:@BeansTown106

--- a/core/res/res/values/nexus_arrays.xml
+++ b/core/res/res/values/nexus_arrays.xml
@@ -15,10 +15,20 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Is Advanced Reboot enabled? -->
-    <bool name="config_advanced_reboot">true</bool>
+    <!-- Defines the shutdown options shown in the reboot dialog. -->
+    <array name="shutdown_reboot_options" translatable="false">
+        <item>@string/reboot_reboot</item>
+        <item>@string/reboot_soft</item>
+        <item>@string/reboot_recovery</item>
+        <item>@string/reboot_bootloader</item>
+    </array>
 
-    <!-- Package name providing alternate WebView implementation.
-         Fall back to config_webViewPackageName if not available. -->
-    <string name="config_alternateWebViewPackageName" translatable="false">com.google.android.webview</string>
+    <!-- Do not translate. Defines the shutdown actions passed to the kernel.
+         The first item should be empty for regular reboot. -->
+    <string-array name="shutdown_reboot_actions" translatable="false">
+        <item></item>
+        <item>soft_reboot</item>
+        <item>recovery</item>
+        <item>bootloader</item>
+     </string-array>
 </resources>
