--- a/packages/SystemUI/res/layout/recents.xml
+++ b/packages/SystemUI/res/layout/recents.xml
@@ -54,4 +54,7 @@
         android:layout_gravity="center_horizontal|bottom"
         android:scaleType="fitXY"
         android:src="@drawable/recents_lower_gradient" />
+
+    <!-- Clear All FAB -->
+    <include layout="@layout/floating_action_button" />
 </FrameLayout>
